[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/manager/hazard_manager/hazard_manager.gd" type="Script" id=1]
[ext_resource path="res://game/platform/Platforms.tscn" type="PackedScene" id=2]

[node name="HazardManager" type="Node2D"]
script = ExtResource( 1 )

[node name="HazardContainer" type="Node2D" parent="."]

[node name="LeftLow" type="Position2D" parent="."]
position = Vector2( -14, 109 )

[node name="LeftJump" type="Position2D" parent="."]
position = Vector2( -14, 86 )

[node name="RightLow" type="Position2D" parent="."]
position = Vector2( 259, 109 )

[node name="RightJump" type="Position2D" parent="."]
position = Vector2( 259, 86 )

[node name="L1" type="Position2D" parent="."]
position = Vector2( -15, 37 )

[node name="L2" type="Position2D" parent="."]
position = Vector2( -15, 53 )

[node name="R2" type="Position2D" parent="."]
position = Vector2( 258, 34 )

[node name="R3" type="Position2D" parent="."]
position = Vector2( 258, 61 )

[node name="SickleLeft" type="Timer" parent="."]

[node name="SickleRight" type="Timer" parent="."]

[node name="Platforms" parent="." instance=ExtResource( 2 )]

[node name="Top1" type="Position2D" parent="."]
position = Vector2( 43, -18 )

[node name="Top2" type="Position2D" parent="."]
position = Vector2( 73, -18 )

[node name="Top3" type="Position2D" parent="."]
position = Vector2( 103, -18 )

[node name="Top4" type="Position2D" parent="."]
position = Vector2( 134, -18 )

[node name="Top5" type="Position2D" parent="."]
position = Vector2( 161, -18 )

[node name="Top6" type="Position2D" parent="."]
position = Vector2( 188, -18 )
